force-app/main/default/objects/PMC_ProcessSwitches__c/PMC_ProcessSwitches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom Setting is for implementing bypass framework for triggers, flows, integrations and validation rules.</description>
    <label>Process Switches</label>
</CustomObject>