force-app/main/default/objects/PMC_ProcessSwitches__c/fields/PMC_BypassFlow__c.field-meta.xml
<CustomField>
    <fullName>PMC_BypassFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to bypass the flows.</description>
    <label>Bypass Flow</label>
    <type>Checkbox</type>
</CustomField>