force-app/main/default/objects/PMC_ProcessSwitches__c/fields/PMC_BypassIntegration__c.field-meta.xml
<CustomField>
    <fullName>PMC_BypassIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to bypass integrations</description>
    <label>Bypass Integration</label>
    <type>Checkbox</type>
</CustomField>