force-app/main/default/objects/PMC_ProcessSwitches__c/fields/PMC_BypassTrigger__c.field-meta.xml
<CustomField>
    <fullName>PMC_BypassTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to bypass trigger framework</description>
    <label>Bypass Trigger</label>
    <type>Checkbox</type>
</CustomField>