force-app/main/default/objects/PMC_ProcessSwitches__c/fields/PMC_BypassValidationRule__c.field-meta.xml
<CustomField>
    <fullName>PMC_BypassValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to bypass the validation rules</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>